[gd_scene load_steps=4 format=3 uid="uid://rcj2mnv6rwrf"]

[ext_resource type="Script" uid="uid://faa00wjbrp25" path="res://components/user_interface/user_interface.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://d3he1bo7l206j" path="res://components/user_interface/dimensions.tscn" id="2_gv6df"]

[sub_resource type="AtlasTexture" id="1"]

[node name="UserInterface" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 2
script = ExtResource("2")

[node name="AdvancePanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="LetterControl" type="MarginContainer" parent="AdvancePanel"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="AdvancePanel/LetterControl"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Texture" type="HBoxContainer" parent="AdvancePanel/LetterControl/Controls"]
layout_mode = 2
alignment = 1

[node name="Panel" type="PanelContainer" parent="AdvancePanel/LetterControl/Controls/Texture"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="SelectedChar" type="TextureRect" parent="AdvancePanel/LetterControl/Controls/Texture/Panel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("1")

[node name="CurrentAdvance" type="ColorRect" parent="AdvancePanel/LetterControl/Controls/Texture/Panel"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
size_flags_horizontal = 0

[node name="AdvanceControls" type="VBoxContainer" parent="AdvancePanel/LetterControl/Controls"]
layout_mode = 2

[node name="XAdvanceLabel" type="Label" parent="AdvancePanel/LetterControl/Controls/AdvanceControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "X Advance"
horizontal_alignment = 1

[node name="Edit" type="HBoxContainer" parent="AdvancePanel/LetterControl/Controls/AdvanceControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentAdvanceEdit" type="LineEdit" parent="AdvancePanel/LetterControl/Controls/AdvanceControls/Edit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Pixels2" type="Label" parent="AdvancePanel/LetterControl/Controls/AdvanceControls/Edit"]
layout_mode = 2
size_flags_horizontal = 3
text = "px"
horizontal_alignment = 1

[node name="Slash" type="Label" parent="AdvancePanel/LetterControl/Controls/AdvanceControls/Edit"]
layout_mode = 2
size_flags_horizontal = 3
text = "/"
horizontal_alignment = 1

[node name="AdvanceLimit" type="Label" parent="AdvancePanel/LetterControl/Controls/AdvanceControls/Edit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "10"
horizontal_alignment = 1

[node name="Pixels" type="Label" parent="AdvancePanel/LetterControl/Controls/AdvanceControls/Edit"]
layout_mode = 2
size_flags_horizontal = 3
text = "px"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="AdvancePanel/LetterControl/Controls/AdvanceControls"]
layout_mode = 2

[node name="Decrease" type="Button" parent="AdvancePanel/LetterControl/Controls/AdvanceControls/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "<"

[node name="Increase" type="Button" parent="AdvancePanel/LetterControl/Controls/AdvanceControls/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = ">"

[node name="OffsetControls" type="VBoxContainer" parent="AdvancePanel/LetterControl/Controls"]
layout_mode = 2

[node name="OffsetLabel" type="Label" parent="AdvancePanel/LetterControl/Controls/OffsetControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Offset"
horizontal_alignment = 1

[node name="CurrentOffsetEdit" parent="AdvancePanel/LetterControl/Controls/OffsetControls" instance=ExtResource("2_gv6df")]
unique_name_in_owner = true
layout_mode = 2
allow_negative = true

[node name="Index" type="Label" parent="AdvancePanel/LetterControl/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "CURRENT_CHAR_INDEX"
horizontal_alignment = 1

[node name="LetterSwitch" type="HBoxContainer" parent="AdvancePanel/LetterControl/Controls"]
layout_mode = 2
alignment = 1

[node name="Centering" type="CenterContainer" parent="AdvancePanel/LetterControl/Controls/LetterSwitch"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Controls" type="HBoxContainer" parent="AdvancePanel/LetterControl/Controls/LetterSwitch/Centering"]
layout_mode = 2

[node name="PrevChar" type="Button" parent="AdvancePanel/LetterControl/Controls/LetterSwitch/Centering/Controls"]
layout_mode = 2
text = "<"

[node name="CurrentChar" type="LineEdit" parent="AdvancePanel/LetterControl/Controls/LetterSwitch/Centering/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Slash" type="Label" parent="AdvancePanel/LetterControl/Controls/LetterSwitch/Centering/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "/"

[node name="CharCount" type="Label" parent="AdvancePanel/LetterControl/Controls/LetterSwitch/Centering/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "10"

[node name="NextChar" type="Button" parent="AdvancePanel/LetterControl/Controls/LetterSwitch/Centering/Controls"]
layout_mode = 2
text = ">"

[node name="PaintToggle" type="HBoxContainer" parent="AdvancePanel/LetterControl/Controls"]
layout_mode = 2
alignment = 1

[node name="CheckButton" type="CheckButton" parent="AdvancePanel/LetterControl/Controls/PaintToggle"]
layout_mode = 2
text = "PAINT_INFO"

[node name="SpaceFill" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="RightSide" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TextureInfo" type="PanelContainer" parent="RightSide"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="RightSide/TextureInfo"]
layout_mode = 2

[node name="Items" type="VBoxContainer" parent="RightSide/TextureInfo/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Title" type="VBoxContainer" parent="RightSide/TextureInfo/Margin/Items"]
layout_mode = 2

[node name="ProjectTitle" type="Label" parent="RightSide/TextureInfo/Margin/Items/Title"]
layout_mode = 2
text = "PROJECT_NAME"

[node name="ImageLoad" type="Button" parent="RightSide/TextureInfo/Margin/Items/Title"]
layout_mode = 2
text = "LOAD_AN_IMAGE"

[node name="FontLoad" type="Button" parent="RightSide/TextureInfo/Margin/Items/Title"]
layout_mode = 2
text = "LOAD_A_FONT"

[node name="FontName" type="VBoxContainer" parent="RightSide/TextureInfo/Margin/Items"]
layout_mode = 2

[node name="FontNameLabel" type="Label" parent="RightSide/TextureInfo/Margin/Items/FontName"]
layout_mode = 2
text = "FONT_NAME"

[node name="FontNameEdit" type="LineEdit" parent="RightSide/TextureInfo/Margin/Items/FontName"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureName" type="VBoxContainer" parent="RightSide/TextureInfo/Margin/Items"]
layout_mode = 2

[node name="TextureNameLabel" type="Label" parent="RightSide/TextureInfo/Margin/Items/TextureName"]
layout_mode = 2
text = "TEXTURE_NAME"

[node name="TextureNameEdit" type="LineEdit" parent="RightSide/TextureInfo/Margin/Items/TextureName"]
unique_name_in_owner = true
layout_mode = 2
editable = false

[node name="FontInfo" type="PanelContainer" parent="RightSide"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="RightSide/FontInfo"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Margin" type="MarginContainer" parent="RightSide/FontInfo/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Items" type="VBoxContainer" parent="RightSide/FontInfo/Scroll/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="CharDimensions" type="VBoxContainer" parent="RightSide/FontInfo/Scroll/Margin/Items"]
layout_mode = 2

[node name="CharDimensionsLabel" type="Label" parent="RightSide/FontInfo/Scroll/Margin/Items/CharDimensions"]
layout_mode = 2
text = "CHAR_DIMENSIONS"

[node name="CharDimensionsEdit" parent="RightSide/FontInfo/Scroll/Margin/Items/CharDimensions" instance=ExtResource("2_gv6df")]
unique_name_in_owner = true
layout_mode = 2

[node name="BaseFromTop" type="VBoxContainer" parent="RightSide/FontInfo/Scroll/Margin/Items"]
layout_mode = 2

[node name="BaseFromTopLabel" type="Label" parent="RightSide/FontInfo/Scroll/Margin/Items/BaseFromTop"]
layout_mode = 2
text = "BASE_FROM_TOP"

[node name="BaseSettings" type="HBoxContainer" parent="RightSide/FontInfo/Scroll/Margin/Items/BaseFromTop"]
layout_mode = 2

[node name="BaseEdit" type="SpinBox" parent="RightSide/FontInfo/Scroll/Margin/Items/BaseFromTop/BaseSettings"]
unique_name_in_owner = true
layout_mode = 2
rounded = true
allow_greater = true

[node name="Pixels" type="Label" parent="RightSide/FontInfo/Scroll/Margin/Items/BaseFromTop/BaseSettings"]
layout_mode = 2
text = "px"

[node name="CharList" type="VBoxContainer" parent="RightSide/FontInfo/Scroll/Margin/Items"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharListLabel" type="Label" parent="RightSide/FontInfo/Scroll/Margin/Items/CharList"]
layout_mode = 2
text = "CHAR_LIST"

[node name="CharListEdit" type="TextEdit" parent="RightSide/FontInfo/Scroll/Margin/Items/CharList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1
autowrap_mode = 1

[node name="Export" type="VBoxContainer" parent="RightSide/FontInfo/Scroll/Margin/Items"]
layout_mode = 2

[node name="ExportButton" type="Button" parent="RightSide/FontInfo/Scroll/Margin/Items/Export"]
layout_mode = 2
text = "EXPORT_FNT"

[node name="ExportAsXMLButton" type="Button" parent="RightSide/FontInfo/Scroll/Margin/Items/Export"]
layout_mode = 2
text = "EXPORT_FNT_AS_XML"

[node name="OpenFile" type="FileDialog" parent="."]
unique_name_in_owner = true
access = 2

[node name="InfoDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
dialog_text = "Dialog message."

[node name="OverwriteConfirmation" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
dialog_text = "FILE_EXISTS"

[connection signal="focus_exited" from="AdvancePanel/LetterControl/Controls/AdvanceControls/Edit/CurrentAdvanceEdit" to="." method="_on_char_advance_edit_focus_exited"]
[connection signal="pressed" from="AdvancePanel/LetterControl/Controls/AdvanceControls/Buttons/Decrease" to="." method="_on_decrease_advance_button_pressed"]
[connection signal="pressed" from="AdvancePanel/LetterControl/Controls/AdvanceControls/Buttons/Increase" to="." method="_on_increase_advance_button_pressed"]
[connection signal="value_changed" from="AdvancePanel/LetterControl/Controls/OffsetControls/CurrentOffsetEdit" to="." method="_on_current_offset_edit_value_changed"]
[connection signal="pressed" from="AdvancePanel/LetterControl/Controls/LetterSwitch/Centering/Controls/PrevChar" to="." method="_on_prev_char_button_pressed"]
[connection signal="focus_exited" from="AdvancePanel/LetterControl/Controls/LetterSwitch/Centering/Controls/CurrentChar" to="." method="_on_current_char_edit_focus_exited"]
[connection signal="pressed" from="AdvancePanel/LetterControl/Controls/LetterSwitch/Centering/Controls/NextChar" to="." method="_on_next_char_button_pressed"]
[connection signal="toggled" from="AdvancePanel/LetterControl/Controls/PaintToggle/CheckButton" to="." method="_on_paint_toggled"]
[connection signal="pressed" from="RightSide/TextureInfo/Margin/Items/Title/ImageLoad" to="." method="_on_image_load_pressed"]
[connection signal="pressed" from="RightSide/TextureInfo/Margin/Items/Title/FontLoad" to="." method="_on_font_load_pressed"]
[connection signal="value_changed" from="RightSide/FontInfo/Scroll/Margin/Items/CharDimensions/CharDimensionsEdit" to="." method="_on_char_dimensions_edit_value_changed"]
[connection signal="value_changed" from="RightSide/FontInfo/Scroll/Margin/Items/BaseFromTop/BaseSettings/BaseEdit" to="." method="_on_base_edit_value_changed"]
[connection signal="pressed" from="RightSide/FontInfo/Scroll/Margin/Items/Export/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="pressed" from="RightSide/FontInfo/Scroll/Margin/Items/Export/ExportAsXMLButton" to="." method="_on_export_as_xml_button_pressed"]
[connection signal="file_selected" from="OpenFile" to="." method="_on_file_selected"]
